[package]
name = "rust_subscriber"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
solana-client = "2.1"
solana-sdk = "2.1"
solana-transaction-status = "2.1"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = false
codegen-units = 16




